Fix focus on next button in zoomwindow (fix #765)

--- a/gui/src/viewer/zoomwindow.ui
+++ b/gui/src/viewer/zoomwindow.ui
@@ -23,7 +23,7 @@
    <string>Image</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="../../resources.qrc">
+   <iconset resource="../../../resources/resources.qrc">
     <normaloff>:/images/icon.ico</normaloff>:/images/icon.ico</iconset>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2" stretch="1,0,0,0">
@@ -254,21 +254,24 @@
   </layout>
  </widget>
  <tabstops>
+  <tabstop>scrollArea</tabstop>
+  <tabstop>buttonPrev</tabstop>
   <tabstop>buttonDetails</tabstop>
   <tabstop>buttonSave</tabstop>
   <tabstop>buttonSaveNQuit</tabstop>
   <tabstop>buttonOpen</tabstop>
+  <tabstop>buttonPlus</tabstop>
+  <tabstop>buttonSaveAs</tabstop>
+  <tabstop>buttonNext</tabstop>
   <tabstop>buttonSaveFav</tabstop>
   <tabstop>buttonSaveNQuitFav</tabstop>
   <tabstop>buttonOpenFav</tabstop>
-  <tabstop>buttonPlus</tabstop>
-  <tabstop>buttonSaveAs</tabstop>
-  <tabstop>scrollArea</tabstop>
  </tabstops>
  <resources>
-  <include location="../../resources.qrc"/>
-  <include location="../../resources.qrc"/>
-  <include location="../../resources.qrc"/>
+  <include location="../../../resources/resources.qrc"/>
+  <include location="../../../resources/resources.qrc"/>
+  <include location="../../../resources/resources.qrc"/>
+  <include location="../../../resources/resources.qrc"/>
  </resources>
  <connections>
   <connection>
