Add drag and drop feature to search a file by MD5 (fix #764)

--- a/gui/src/mainwindow.ui
+++ b/gui/src/mainwindow.ui
@@ -10,8 +10,11 @@
     <height>541</height>
    </rect>
   </property>
+  <property name="acceptDrops">
+   <bool>true</bool>
+  </property>
   <property name="windowIcon">
-   <iconset resource="../resources.qrc">
+   <iconset resource="../../resources/resources.qrc">
     <normaloff>:/images/icon.ico</normaloff>:/images/icon.ico</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
@@ -924,7 +927,7 @@ QTextEdit {
   </widget>
   <action name="actionOptions">
    <property name="icon">
-    <iconset resource="../resources.qrc">
+    <iconset resource="../../resources/resources.qrc">
      <normaloff>:/images/icons/settings.png</normaloff>:/images/icons/settings.png</iconset>
    </property>
    <property name="text">
@@ -936,7 +939,7 @@ QTextEdit {
   </action>
   <action name="actionFolder">
    <property name="icon">
-    <iconset resource="../resources.qrc">
+    <iconset resource="../../resources/resources.qrc">
      <normaloff>:/images/icons/folder-images.png</normaloff>:/images/icons/folder-images.png</iconset>
    </property>
    <property name="text">
@@ -945,7 +948,7 @@ QTextEdit {
   </action>
   <action name="actionQuit">
    <property name="icon">
-    <iconset resource="../resources.qrc">
+    <iconset resource="../../resources/resources.qrc">
      <normaloff>:/images/icons/exit.png</normaloff>:/images/icons/exit.png</iconset>
    </property>
    <property name="text">
@@ -954,7 +957,7 @@ QTextEdit {
   </action>
   <action name="actionAboutGrabber">
    <property name="icon">
-    <iconset resource="../resources.qrc">
+    <iconset resource="../../resources/resources.qrc">
      <normaloff>:/images/icons/about.png</normaloff>:/images/icons/about.png</iconset>
    </property>
    <property name="text">
@@ -963,7 +966,7 @@ QTextEdit {
   </action>
   <action name="actionAboutQt">
    <property name="icon">
-    <iconset resource="../resources.qrc">
+    <iconset resource="../../resources/resources.qrc">
      <normaloff>:/images/icons/qt.png</normaloff>:/images/icons/qt.png</iconset>
    </property>
    <property name="text">
@@ -972,7 +975,7 @@ QTextEdit {
   </action>
   <action name="actionAddtab">
    <property name="icon">
-    <iconset resource="../resources.qrc">
+    <iconset resource="../../resources/resources.qrc">
      <normaloff>:/images/icons/tab-plus.png</normaloff>:/images/icons/tab-plus.png</iconset>
    </property>
    <property name="text">
@@ -981,7 +984,7 @@ QTextEdit {
   </action>
   <action name="actionClosetab">
    <property name="icon">
-    <iconset resource="../resources.qrc">
+    <iconset resource="../../resources/resources.qrc">
      <normaloff>:/images/icons/tab-minus.png</normaloff>:/images/icons/tab-minus.png</iconset>
    </property>
    <property name="text">
@@ -1036,7 +1039,7 @@ QTextEdit {
   </action>
   <action name="actionAddpooltab">
    <property name="icon">
-    <iconset resource="../resources.qrc">
+    <iconset resource="../../resources/resources.qrc">
      <normaloff>:/images/icons/tab-poolplus.png</normaloff>:/images/icons/tab-poolplus.png</iconset>
    </property>
    <property name="text">
@@ -1050,7 +1053,7 @@ QTextEdit {
   </action>
   <action name="actionSettingsFolder">
    <property name="icon">
-    <iconset resource="../resources.qrc">
+    <iconset resource="../../resources/resources.qrc">
      <normaloff>:/images/icons/folder-document.png</normaloff>:/images/icons/folder-document.png</iconset>
    </property>
    <property name="text">
@@ -1059,7 +1062,7 @@ QTextEdit {
   </action>
   <action name="actionAboutWebsite">
    <property name="icon">
-    <iconset resource="../resources.qrc">
+    <iconset resource="../../resources/resources.qrc">
      <normaloff>:/images/icons/browser.png</normaloff>:/images/icons/browser.png</iconset>
    </property>
    <property name="text">
@@ -1068,7 +1071,7 @@ QTextEdit {
   </action>
   <action name="actionAboutReportBug">
    <property name="icon">
-    <iconset resource="../resources.qrc">
+    <iconset resource="../../resources/resources.qrc">
      <normaloff>:/images/icons/bug.png</normaloff>:/images/icons/bug.png</iconset>
    </property>
    <property name="text">
@@ -1108,9 +1111,10 @@ QTextEdit {
   <tabstop>buttonSaveSettings</tabstop>
  </tabstops>
  <resources>
-  <include location="../resources.qrc"/>
-  <include location="../resources.qrc"/>
-  <include location="../resources.qrc"/>
+  <include location="../../resources/resources.qrc"/>
+  <include location="../../resources/resources.qrc"/>
+  <include location="../../resources/resources.qrc"/>
+  <include location="../../resources/resources.qrc"/>
  </resources>
  <connections>
   <connection>
